--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "leaflet": "^1.9.4",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "query-string": "^8.1.0",
@@ -27,14 +28,18 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "husky": "^8.0.3",
     "prisma": "^4.14.0"
   }
