--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.1",
     "leaflet": "^1.9.4",
     "next": "13.4.1",
+    "next-cloudinary": "^4.10.1",
     "postcss": "8.4.23",
     "query-string": "^8.1.0",
     "react": "18.2.0",
